# make_menuconfig_mconf

./: CMakeLists.txt  README.md  build-linux-static.sh  build-linux.sh  build-windows.sh  config.h.in  simple_test.config  test_Kconfig
.github/workflows/: build-and-release.yml
cmake/: FindNCurses.cmake
include/: lkc.h
lxdialog/: dialog.h  util.c
src/: confdata.c  mconf.c  menu.c  symbol.c
